# docs/swagger.yaml
@@ -543,6 +543,40 @@ paths:
       summary: Delete a chapter
       tags:
       - Chapter
+    put:
+      consumes:
+      - application/json
+      description: Update a chapter by ID
+      parameters:
+      - description: Chapter ID
+        in: path
+        name: chapterId
+        required: true
+        type: integer
+      - description: Chapter request body
+        in: body
+        name: chapter
+        required: true
+        schema:
+          $ref: '#/definitions/request.BookChapterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Update a chapter
+      tags:
+      - Chapter
   /chapters/{chapterId}/pages:
     get:
       description: Retrieve all pages within a chapter
@@ -602,6 +636,41 @@ paths:
           schema:
             $ref: '#/definitions/response.WebResponse'
       summary: Add a page to a chapter
+      tags:
+      - Page
+  /chapters/{chapterId}/pages/{pageId}:
+    put:
+      consumes:
+      - application/json
+      description: Update a page by ID
+      parameters:
+      - description: Page ID
+        in: path
+        name: pageId
+        required: true
+        type: integer
+      - description: Page request body
+        in: body
+        name: page
+        required: true
+        schema:
+          $ref: '#/definitions/request.PageRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Update a page
       tags:
       - Page
   /orders:
